2016-06-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/greenbone.js (OMPDialog.prototype.setContent):
	Do not submit on "enter" key press if a multi-line textarea is focused.

2016-06-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (get_report, new_note, new_override): Remove handling
	of min_cvss_base request param.

	* src/gsad.c (init_validator): Remove params min_cvss_base and
	apply_min_cvss_base.  Make default_severity a normal param.

	* src/html/classic/omp.xsl (filter-criteria, filter-extra)
	(filter-window-part, report [filterbox], report [section-filter-full])
	(report [apps]): Remove min_cvss_base filter keyword.

	* src/html/classic/js/gsa_graphics_base.js (extract_filter_info):
	Remove min_cvss_base filter keyword.

2016-06-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/help.xsl (new_alert.html): Add new placeholders
	$N, $u, $U for email subject and message.

2016-06-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Make the "Edit My Settings" dialog send OMP requests only for settings
	that changed and remove the various get_... OMP requests in the
	save_my_settings which should be done by edit_my_settings.

	* src/gsad_omp.c (send_settings_filters): Add param "changed" for
	checking which settings were changed.
	(save_my_settings_omp): Check "settings_changed:" request params to
	see which settings must be saved.  Do not get resources as
	edit_my_settings will do so.

	* src/gsad.c (init_validator, params_append_mhd, params_mhd_add): Add
	hashtable param "settings_changed".

	* src/html/classic/js/greenbone.js (on_ready): Add listeners and hidden
	"settings_changed:" inputs for elements with "setting-control" CSS
	class to check for changes in settings.

	* src/html/classic/omp.xsl (edit-settings-resource)
	(edit-settings-filters, severity-settings-list): Add CSS class
	"setting-control" and "data-setting" attribute to select elements.